--- a/css/styes.scss
+++ b/css/styes.scss
@@ -38,14 +38,10 @@ body {
 h1{
   font-family: var(--ff-primary);
   margin-bottom: 3rem;
-}
-
-h1 {
   font-size: var(--fs-h1);
   text-align: center;
   color: var(--clr-light);
 }
-
 
 .btn{
   padding: .5em .75em;
@@ -89,7 +85,7 @@ h1 {
   background-color: var(--clr-dark);
   border-radius: 10px;
   padding: 2rem;
-  // box-shadow: 0px 0px 15px #000000;
+  box-shadow: 0px 0px 10px #0000006b;
   color: var(--clr-light);
 
   .output-container{
