--- a/css/styes.css
+++ b/css/styes.css
@@ -1,4 +1,4 @@
-/** Gobals **/
+/** Globals **/
 *,
 *::before,
 *::after {
@@ -34,17 +34,6 @@ body {
   background-color: var(--clr-accent);
 }
 
-h1 {
-  font-family: var(--ff-primary);
-  margin-bottom: 3rem;
-}
-
-h1 {
-  font-size: var(--fs-h1);
-  text-align: center;
-  color: var(--clr-light);
-}
-
 .btn {
   padding: 0.5em 0.75em;
   display: block;
@@ -67,14 +56,15 @@ h1 {
 /* Utilities */
 .container {
   max-width: 1200px;
+  padding: 2rem;
   width: 90%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  height: 100svh;
+  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 /*Main content*/
@@ -87,6 +77,7 @@ h1 {
   background-color: var(--clr-dark);
   border-radius: 10px;
   padding: 2rem;
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.4196078431);
   color: var(--clr-light);
 }
 .generator-container .output-container {
