--- a/css/styes.scss
+++ b/css/styes.scss
@@ -1,4 +1,4 @@
-/** Gobals **/
+/** Globals **/
 *,
 *::before,
 *::after {
@@ -35,14 +35,6 @@ body {
   background-color: var(--clr-accent);
 }
 
-h1{
-  font-family: var(--ff-primary);
-  margin-bottom: 3rem;
-  font-size: var(--fs-h1);
-  text-align: center;
-  color: var(--clr-light);
-}
-
 .btn{
   padding: .5em .75em;
   display: block;
@@ -65,14 +57,15 @@ h1{
 /* Utilities */
 .container{
   max-width: 1200px;
+  padding: 2rem;
   width: 90%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  height: 100svh;
+  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 /*Main content*/
@@ -85,7 +78,7 @@ h1{
   background-color: var(--clr-dark);
   border-radius: 10px;
   padding: 2rem;
-  box-shadow: 0px 0px 10px #0000006b;
+  box-shadow: 4px 4px 15px #0000006b;
   color: var(--clr-light);
 
   .output-container{
